# AI-Mandatory1

./: .gitignore  pyproject.toml
Data/: cars_cleaned.csv
Logistic_Regression/: logistic_regression_model.joblib  logistic_regression_model_grid_search.joblib  logistic_regression_model_tuned.joblib  main.py
Regression/: main.py
