[tool.poetry]
name = "ai -mandatory-1"
version = "0.1.0"
description = ""
authors = ["Yelong Hartl-He <Yelong.he@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
